跑通 聊天机器人

--- a/summarize/workspace.ipynb
+++ b/summarize/workspace.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 使用MapReduce的方式来提炼《神雕侠侣》"
+    "# 使用MapReduce的方式来提炼《共产党宣言》"
    ]
   },
   {
@@ -50,7 +50,6 @@
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import ReduceDocumentsChain, MapReduceDocumentsChain\n",
     "from langchain.document_loaders import WebBaseLoader\n",
-    "from langchain.document_loaders import UnstructuredEPubLoader\n",
     "from langchain.chains.llm import LLMChain\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains.combine_documents.stuff import StuffDocumentsChain\n",
@@ -96,7 +95,6 @@
     "    chunk_size=12000, chunk_overlap=0 # 注意：不同于知识库，overlap一定要是0，不然会有重复内容。\n",
     ")\n",
     "\n",
-    "# loader = UnstructuredEPubLoader('shendiao.epub')\n",
     "loader = WebBaseLoader(\"https://www.marxists.org/chinese/marx/01.htm\")\n",
     "docs = loader.load()\n",
     "split_docs = text_splitter.split_documents(docs)\n",
