--- a/QA/workspace.ipynb
+++ b/QA/workspace.ipynb
@@ -160,7 +160,7 @@
     "import time\n",
     "\n",
     "timer = time.time()\n",
-    "loader = UnstructuredEPubLoader('shendiao.epub')\n",
+    "loader = UnstructuredEPubLoader('../resources/shendiao.epub')\n",
     "docs = loader.load()\n",
     "print(\"load\",time.time()-timer)\n",
     "timer = time.time()\n",
@@ -171,7 +171,7 @@
     "timer = time.time()\n",
     "\n",
     "embeddings=HuggingFaceEmbeddings(model_name='shibing624/text2vec-base-chinese')\n",
-    "persist_directory=\"../chroma_db\"\n",
+    "persist_directory=\"../resources/chroma_db\"\n",
     "vectorstore = Chroma(\"shendiao\",embeddings,persist_directory)\n",
     "for i in range(len(split_docs)):\n",
     "    if i%10==0:\n",
@@ -280,9 +280,9 @@
     "from langchain.chains.question_answering import load_qa_chain\n",
     "\n",
     "embeddings=HuggingFaceEmbeddings(model_name='shibing624/text2vec-base-chinese')\n",
-    "vectorstore = Chroma(\"shendiao\",persist_directory=\"./chroma_db\", embedding_function=embeddings)\n",
+    "vectorstore = Chroma(\"shendiao\",persist_directory=\"../resources/chroma_db\", embedding_function=embeddings)\n",
     "\n",
-    "llm = OpenAI(temperature=0.5,model_name=\"gpt-3.5-turbo-16k\")\n",
+    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-3.5-turbo-16k\",openai_api_base=\"http://3.101.17.202/v1\")\n",
     "chain = load_qa_chain(llm, chain_type=\"stuff\")\n",
     "\n",
     "query = \"杨过手怎么断的？\"\n",
